--- a/android-storage-tool/build.gradle
+++ b/android-storage-tool/build.gradle
@@ -22,6 +22,13 @@ android {
         }
     }
 
+    libraryVariants.all { variant ->
+        variant.outputs.each { output ->
+            output.outputFileName = 'android-storage-tool_' + variant.buildType.name + '_v' + defaultConfig.versionName + '.aar'
+        }
+    }
+
+
 }
 
 dependencies {
